feat(server): Scenario execution inherits scenario and dataset tags (#46)